tests/NormalTests/paczka1/small_fuzzy/17738696.err
Error in line 6: tK86Vv A812 70,4
Error in line 3: JM6vg074Q1d S948 23,8
